--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  expandable: ^4.1.4
   share: ^0.6.5+4
   flutter_slidable: ^0.5.7
   flutter_lorem: ^1.1.0
