--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,14 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
-  expandable: ^4.1.4
-  share: ^0.6.5+4
+  firebase_core:
   flutter_slidable: ^0.5.7
-  flutter_lorem: ^1.1.0
+  flutter_lorem: ^2.0.0
+  articlewidgets:
+    path: ../shared_article_packages/articlewidgets
   flutter:
     sdk: flutter
 
@@ -34,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  change_app_package_name: ^0.1.2
   flutter_test:
     sdk: flutter
 
