--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
+  font_awesome_flutter: ^9.0.0
+  firebase_auth:
   provider:
   material_floating_search_bar: ^0.3.3
   flutter_slidable: ^0.5.7
