--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,15 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
+  lit_firebase_auth: ^0.3.0
   font_awesome_flutter: ^9.0.0
   firebase_auth:
   provider:
   material_floating_search_bar: ^0.3.3
   flutter_slidable: ^0.5.7
   flutter_lorem: ^2.0.0
+  unathenticated_widget:
+    path: ../shared_lib/unathenticated_widget
   articlemodel:
     path: ../shared_article_packages/articlemodel
   articlewidgets:
