--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
+  logging: ^1.0.1
   shared_preferences: ^2.0.5
   mockito:
   flutter_tts: ^3.0.0
@@ -58,15 +59,21 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_native_splash: ^0.3.2
 
+
 dev_dependencies:
+  flutter_launcher_name: "^0.0.1"
   test:
-  change_app_package_name: ^0.1.2
+  change_app_package_name:
+
+
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
+flutter_launcher_name:
+  name: "Readaz"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
